feat: optional position embeddings (positions=none) for O(1) streaming generation with linear attention
positions=none drops the learned position table; position information then comes only from the linear-attention decay (or the causal mask for softmax). Weights no longer depend on the context length, and Decoder keeps carrying state past the context for linear attention instead of refilling the window. The setting is stored in RunConfig and checkpoints; configs without it load as learned. Gradient checks cover the new mode, and KernelGoldenTest now keys fingerprints by lane count so the suite also passes with 8-lane (AVX2) vectors. Docs describe the next run: positions=none, a single 1-epoch cosine, on a Ryzen 9 5900X (no AVX-512, so no native kernels and no BF16).

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>